fixed the 1px background overflow

--- a/style.css
+++ b/style.css
@@ -2,33 +2,28 @@ body {
   margin: 0;
   overflow: hidden;
   height: 100vh;
-  align-content: center;
   background-color: darkslategray;
 }
 
-.wrapper,
+.background {
+  background-image: url("assets/images/background.jpg");
+  background-repeat: repeat;
+}
+
+.background,
 .container {
-  position: absolute;
+  /* make them stack on top of each other */
+  position: absolute; 
   inset: 0;
   width: 75vw;
   height: 75vh;
-  margin: auto;
-}
-
-.background-image {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.playground {
-  position: absolute;
-  inset: 0;
-  display: block;
-  margin: auto;
+  margin: auto; 
+  /* margin is the only viable way of centering here
+   because center has to stay in the center during shrink() */
 }
 
 .score { 
+  /* sticks to the center of the top border of its parent */
   position: absolute;
   inset: 0;
   justify-self: center;
